name:                bch
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/kendricktan/bch#readme
license:             BSD3
license-file:        LICENSE
author:              Kendrick Tan
maintainer:          kendricktan0814@gmail.com
copyright:           2017 Kendrick Tan
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , cryptohash
                     , bytestring
                     , base16-bytestring
                     , utf8-string
  default-language:    Haskell2010

executable bch-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bch
                     , bytestring
  default-language:    Haskell2010

test-suite bch-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , bch
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kendricktan/bch
